<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_intro"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.AboutActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            app:srcCompat="@drawable/ico_back_arrow" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="15dp"
            android:text="@string/titleAbout"
            android:textColor="@color/colorBrand1"
            android:textSize="20sp" />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/colorBorder"
        />

    <ImageView
        android:id="@+id/medium_logo"
        android:layout_width="370dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        app:srcCompat="@drawable/logo_medium" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pyfVersion"
        android:layout_marginTop="15dp"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:layout_gravity="center"
        />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_height="200dp"
        app:srcCompat="@drawable/ico_branded_hands"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|bottom"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/copyright"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/copyright"
            android:textColor="@color/black" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ico_dot"
            android:layout_marginBottom="5dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
android:textStyle="bold"
            android:text="@string/privacyPolicy" />
    </LinearLayout>
</LinearLayout>