<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="20dp"
        android:text="@string/accountInformation"
        android:textColor="@color/colorBrand1"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/edit_text_round_style"
        android:padding="5dp">

        <EditText
            android:id="@+id/username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/Transparent"
            android:hint="@string/signUpHintUsername"
            android:inputType="text"
            android:padding="0dp"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/icoUserName"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ico_user" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/edit_text_round_style"
        android:padding="5dp">

        <EditText
            android:id="@+id/password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/Transparent"
            android:hint="@string/signUpHintPassword"
            android:inputType="textPassword"
            android:padding="0dp"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/icoPassword"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ico_password" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/edit_text_round_style"
        android:padding="5dp">

        <EditText
            android:id="@+id/confirmPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/Transparent"
            android:hint="@string/signUpHintConfirmPassword"
            android:inputType="textPassword"
            android:padding="0dp"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/icoConfirmPassword"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ico_password" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="25dp"
        android:text="@string/bankInformation"
        android:textColor="@color/colorBrand1"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/edit_text_round_style"
        android:padding="5dp">

        <Spinner
            android:id="@+id/bankSpinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/Transparent"
            android:entries="@array/ethiopian_banks_arrays"
            android:padding="0dp"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/icoBank"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ico_drop_down" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/edit_text_round_style"
        android:padding="5dp">

        <EditText
            android:id="@+id/accountNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/Transparent"
            android:hint="@string/signUpHintAccountNumber"
            android:inputType="number"
            android:padding="0dp"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/icoAccountNumber"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ico_account_number" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:srcCompat="@drawable/ico_navigation2" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/button_brand_bg_rounded_corners"
        android:text="@string/btnSignUp"
        android:textColor="@color/colorWhite" />

</LinearLayout>