<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_intro"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.RecoverPasswordActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/recoverPasswordBackArrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            app:srcCompat="@drawable/ico_back_arrow" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="15dp"
            android:text="@string/titleRequestOnExtension"
            android:textColor="@color/colorBrand1"
            android:textSize="20sp" />
    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/my_custom_background"
        android:orientation="vertical"
        android:layout_marginRight="-2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/my_custom_background"
            android:orientation="vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="12dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:text="@string/currentTotalPaymentDate"
                android:textSize="18sp"
                android:layout_gravity="center_horizontal"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="10 April 2017"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:layout_gravity="center_horizontal"

                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/enterNewTotalPaymentDate"
                android:layout_marginTop="60dp"
                android:textSize="18sp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/edit_text_round_style"
                android:padding="5dp">

                <EditText
                    android:id="@+id/newTotalPaymentDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="15sp"
                    android:backgroundTint="@color/Transparent"
                    android:hint="@string/hintNewTotalPaymentDate"
                    android:inputType="date"
                    android:padding="0dp"/>

                <ImageView
                    android:id="@+id/icoDate"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ico_date" />

            </LinearLayout>


            <Button

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="140dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:id="@+id/btnRecover"
                android:textColor="@color/colorWhite"
                android:text="@string/btnRecover"
                android:background="@drawable/button_brand_bg_rounded_corners"
                />

    </LinearLayout>
</LinearLayout>
    </LinearLayout>